src/Services/healthServices/deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: health-services
  labels:
    app.kubernetes.io/part-of: health-erp
